<resources>
    <string name="app_name">Honey Bee</string>
    <string name="app_text">영수증 관리 어플리케이션</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="bottom_sheet_recycler_check">청구 날짜</string>




    <!-- Button -->
    <string name="cancel">취소</string>
    <string name="complete">완료</string>
    <string name="send">전송</string>
    <string name="ok">확인</string>
    <string name="download">다운로드</string>
    <string name="delete">삭제</string>
    <string name="login">로 그 인</string>
    <string name="logout">로 그 아 웃</string>
    <string name="yes">네</string>
    <string name="no">아니요</string>
    <string name="won">%s원</string>
<!--    <string name="permission_ok">권한 있음</string>
    <string name="permission_fail">권한 없음</string>
    <string name="permission_resend">권한 없음</string> -->

    <!-- Dialog delete(삭제) -->
    <string name="dialog_delete_title">영수증 삭제</string>
    <string name="dialog_card_delete_title">카드 삭제</string>
    <string name="dialog_delete_text">정말로 삭제하시겠어요?</string>

    <!-- login 페이지 -->
    <string name="login_id_check_box">아이디 저장</string>
    <string name="login_login_check_box">자동 로그인</string>
    <string name="login_id">id</string>
    <string name="login_id_text">아이디를 입력해주세요.</string>
    <string name="login_pw">pw</string>
    <string name="login_pw_text">비밀번호를 입력해주세요.</string>

    <!-- Dialog 권한 로그인 페이지 -->
    <string name="dialog_permission_title">HoneyBee 이용을 위한\n접근 권한 안내</string>
    <string name="dialog_permission_camera_title">카메라(필수)</string>
    <string name="dialog_permission_camera_text">영수증 사진 촬영</string>
    <string name="dialog_permission_gallery_title">사진, 미디어 파일(필수)</string>
    <string name="dialog_permission_gallery_text">영수증 사진 저장과 관리</string>
    <string name="dialog_permission_notificaton_title">알림(선택)</string>
    <string name="dialog_permission_notificaton_text">공지, 청구 카드 알림 동의 수신</string>
    <!-- Dialog 권한 체크 로그인 페이지 -->
    <string name="dialog_permission_check_title">권한 설정</string>
    <string name="dialog_permission_check_text">권한 거절로 인해 일부 기능이 제한됩니다.</string>
    <string name="dialog_permission_check_positive">권한 설정하러가기</string>


    <!-- 메인(홈) 페이지 -->
    <string name="home_cardlist_title">보유 카드 리스트</string>
    <string name="home_cardlist_text">클릭 시 카드 목록으로 이동 →</string>
    <string name="home_cardlist_empty">카드를 추가해주세요!</string>
    <string name="home_cardList_click">Click!</string>
    <string name="home_list_title">영수증 목록</string>
    <string name="home_add_title">영수증 추가</string>
    <string name="home_notice_title">소식</string>
    <!-- Dialog 메인(홈) 영수증 추가 방법 -->
    <string name="homeAddDialog_title">영수증 추가 방법</string>
    <string name="homeAddDialog_camera">카메라</string>
    <string name="homeAddDialog_gallery">갤러리</string>
    <!--    홈 카드 컴포넌트 -->
    <string name="home_card_item_amount">%s 원</string>
    <!-- Dialog Exit 앱 종료 -->
    <string name="dialog_exit_title">앱 종료</string>
    <string name="dialog_exit_text">앱을 정말 종료하시겠어요?</string>
    <string name="dialog_exit_positive">종료</string>
    <string name="dialog_exit_negative">이어하기</string>


    <string name="camera_text">카메라 로딩중···</string>
    <string name="gallery_text">갤러리 로딩중···</string>
    <!-- sendbill 전송 페이지 -->
    <string name="sendbill_text">해당 카드와 날짜를 금액을 입력해주세요.</string>
    <string name="sendbill_store">가게 이름을 입력해주세요.</string>
    <string name="sendbill_price">금액을 입력해주세요.</string>
    <string name="sendbill_date">날짜을 입력해주세요.</string>
    <!-- BottomSheet sendbill 전송 재확인 페이지 -->
    <string name="bottomSheet_sendbill_title">정말 전송하시겠어요?</string>
    <string name="bottomSheet_sendbill_storeAmountText">금액</string>
    <string name="bottomSheet_sendbill_cardAmountText">카드 잔액</string>
    <string name="bottomSheet_sendbill_storeNameText">가게 이름</string>
    <string name="bottomSheet_sendbill_dateText">영수증 날짜</string>
    <string name="bottomSheet_sendbill_memo">메모를 입력해주세요.</string>

    <!-- BottomSheet 카드 상세 페이지 -->
    <string name="bottomSheet_cardDetail_title">카드 상세</string>

    <!-- BottomSheet 카드 목록 페이지 -->
    <string name="bottomSheet_card_title">등록된 카드</string>
    <string name="bottomSheet_card_amount">%s원 남았어요!</string>
    <string name="bottomSheet_card_empty">비었어요!</string>
    <string name="bottomSheet_expireData">만료 날짜</string>
    <!-- Dialog CardAdd 카드 목록 페이지 -->
    <string name="dialog_cardAdd_title">카드 추가</string>
    <string name="dialog_cardAdd_text">추가할 카드 이름과 금액, 만료 날짜를 입력해주세요.</string>
    <string name="dialog_cardAdd_name">카드 이름을 입력해주세요. (ex. 하나카드)</string>
    <string name="dialog_cardAdd_name_err">카드 이름을 꼭 적어주세요!</string>
    <string name="dialog_cardAdd_price">카드 금액을 입력해주세요.</string>
    <string name="dialog_cardAdd_price_err">카드 금액을 꼭 적어주세요!</string>
    <string name="dialog_cardAdd_price_zero">금액에 0원은 입력이 안됩니다.</string>
    <string name="dialog_cardAdd_cardExpireDate">카드 만료일을 입력해주세요.</string>
    <string name="dialog_cardAdd_cardDesignId">카드 디자인을 선택해주세요.</string>
    <string name="dialog_cardAdd_cardDesignId_txt">%s번 이미지를 선택하셨습니다!</string>
    <!-- Dialog CardChange 카드 목록 페이지 -->
    <string name="dialog_cardChange_title">카드 수정</string>
    <string name="dialog_cardChange_text">카드를 수정하시겠어요?</string>

    <!-- 메뉴 페이지 -->
    <string name="menu_title">메뉴</string>
    <string name="menu_push">푸시 알림</string>
    <string name="menu_push_time_text">에 알림 해드려요!</string>
    <string name="menu_push_time_btn"><u>시간 변경</u></string>
    <string name="menu_app_version_text">앱 버전</string>
    <string name="menu_app_version_num">1.0.0</string>
    <string name="menu_notice_text">공지사항</string>
    <string name="menu_license_text">라이센스</string>
    <string name="dialog_menu_title">푸시 알림 시간 설정</string>


    <!-- 기록페이지 -->
    <string name="record_frame_title">영수증 목록</string>
    <string name="record_server_text">서버의 데이터입니다.</string>
    <string name="record_local_text">휴대폰의 데이터입니다.</string>
    <string name="record__empty">데이터가 비었어요...</string>
    <string name="record__price">원</string>
    <string name="record_user">작성자 : %s</string>

    <!-- Dialog change(수정) 영수증 상세 페이지 -->
    <string name="dialog_change_title">영수증 수정</string>
    <string name="dialog_change_image">이미지</string>
    <string name="dialog_change_image_text">(길게 눌러 수정)</string>
    <string name="dialog_change_cardName">카드</string>
    <string name="dialog_change_storeName">가게 이름</string>
    <string name="dialog_change_storeName_text">가게 이름을 입력해주세요.</string>
    <string name="dialog_change_price">금액</string>
    <string name="dialog_change_price_text">금액을 입력해주세요.</string>
    <string name="dialog_change_date">날짜</string>
    <string name="dialog_change_memo">메모</string>
    <string name="dialog_change_memo_text">메모</string>
    <!-- Dialog 이미지 download(다운로드) 영수증 상세 페이지 -->
    <string name="dialog_download_title">영수증 다운로드</string>
    <string name="dialog_download_text">해당 영수증 이미지를\n다운로드하시겠어요?</string>
    <!-- Dialog 청구 하기 -->
    <string name="dialog_bill_check_complete_title_text">청구 완료</string>
    <string name="dialog_bill_check_cancel_title_text">청구 취소</string>
    <string name="dialog_bill_check_complete_content_text">청구가 완료되었나요?</string>
    <string name="dialog_bill_check_cancel_content_text">청구를 취소하시겠어요?</string>

    <!-- 공지사항 페이지 -->
    <string name="notice_title">공지사항</string>
    <string name="notice_add_text">공지사항 추가</string>
    <string name="notice_add_title">제목을 입력해주세요.</string>
    <string name="notice_add_content">내용을 입력해주세요.</string>


    <!-- 상세 기록 페이지 -->
    <string name="record_show_fail_txt">이미지 로딩 실패!</string>
    <string name="recrod_show_bill_check_txt">청구 날짜</string>
    <string name="record_show_store_name_txt">가게 이름</string>
    <string name="record_show_amount_txt">금액</string>
    <string name="record_show_writer_txt">최초 작성자</string>
    <string name="record_show_writer_date_txt">최초 추가일</string>
    <string name="record_show_modifier_name_txt">최근 수정자</string>
    <string name="record_show_modifier_date_txt">최근 수정일</string>
    <string name="record_show_bill_check_txt">현재 청구 유무</string>
    <string name="record_show_memo_txt">메모</string>
    <string name="notice_empty_txt">공지사항이 아직 없어요!</string>
    <string name="record_server_hint">가게 이름을 입력해주세요.</string>


    <!--필터 리스트-->
    <string-array name="filter_array">
        <item>기본순</item>
        <item>최신순</item>
        <item>오래된순</item>
        <item>카드순</item>
        <item>높은 금액순</item>
        <item>낮은 금액순</item>
<!--        <item>등록 이름순</item>-->
    </string-array>
</resources>