<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="data"
            type="com.example.domain.model.ui.bill.CheckBillData" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        app:behavior_hideable="true"
        app:behavior_draggable="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/round_bottomsheet"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendardbold"
                android:text="@string/bottomSheet_sendbill_title"
                android:textColor="@color/main_font_black"
                android:textSize="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/pretendardsemibold"
                android:text="@{data.cardName, default = `카드 이름`}"
                android:textColor="@color/main_font_black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendardsemibold"
                android:text="@{@string/won(data.storeAmount), default = `금액`}"
                android:textColor="@color/main_font_black"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/pretendardmedium"
                    android:text="@string/bottomSheet_sendbill_cardAmountText"
                    android:textColor="@color/sub_font2_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/pretendardsemibold"
                    android:gravity="right"
                    android:text="@{@string/won(data.cardAmount), default=`잔액`}"
                    android:textColor="@color/main_font_black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/pretendardmedium"
                    android:text="@string/bottomSheet_sendbill_storeNameText"
                    android:textColor="@color/sub_font2_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/pretendardsemibold"
                    android:gravity="right"
                    android:text="@{data.storeName, default=`가게이름`}"
                    android:textColor="@color/main_font_black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/pretendardmedium"
                    android:text="@string/bottomSheet_sendbill_dateText"
                    android:textColor="@color/sub_font2_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/pretendardsemibold"
                    android:gravity="right"
                    android:text="@{data.date, default=`날짜`}"
                    android:textColor="@color/main_font_black" />
            </LinearLayout>

            <EditText
                android:id="@+id/send_memo_editText"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/btn_edittext"
                android:gravity="center"
                android:hint="@string/bottomSheet_sendbill_memo"
                android:maxLength="100"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/send_cancle_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="2"
                    android:background="@drawable/btn_cancel"
                    android:fontFamily="@font/pretendardsemibold"
                    android:text="@string/cancel"
                    android:textColor="@color/main_font_black" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/send_ok_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_ok"
                    android:fontFamily="@font/pretendardsemibold"
                    android:text="@string/send"
                    android:textColor="@color/main_font_black" />
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

